<resources>

    <!--    <string name="qn">Q1.</string>-->
    <!--    <string name="q"></string>-->
    <!--    <string name="q_op1"></string>-->
    <!--    <string name="q_op2"></string>-->
    <!--    <string name="q_op3"></string>-->
    <!--    <string name="q_op4"></string>-->
    <!--    -->
    <string name="app_name">G.K QUIZ</string>
    <string name="Heading">GK Quiz</string>

    <string name="qn0">Q0.</string>
    <string name="ans">Ans</string>
    <string name="ansh">Colour of dark</string>
    <string name="qnoans">black</string>
    <string name="qn1">Q1.</string>
    <string name="q1">What is the world\'s most common religion?</string>
    <string name="q1_op1">Hinduism</string>
    <string name="q1_op2">Christianity</string>
    <string name="q1_op3">Buddhism</string>
    <string name="q1_op4">Islam</string>

    <string name="qn2">Q2.</string>
    <string name="q2">Ball pen function on which one of the following principal?</string>
    <string name="q2_op1">Boyle’s law</string>
    <string name="q2_op2">Gravitational force</string>
    <string name="q2_op3">Surface tension</string>
    <string name="q2_op4">Viscosity</string>

    <string name="qn3">Q3.</string>
    <string name="q3">Who is the first person to reach Mount Everest?</string>
    <string name="q3_op1">Charles Hillary</string>
    <string name="q3_op3">Rajesh Sharma</string>
    <string name="q3_op2"> Edmund Hillary</string>
    <string name="q3_op4">Johan don</string>


    <string name="qn5">Q5.</string>
    <string name="q5"> Which country is not a permanent member of U.N permanent counsil?</string>
    <string name="q5_op1">India</string>
    <string name="q5_op2">USA</string>
    <string name="q5_op3">PRC</string>
    <string name="q5_op4">Italy</string>

    <string name="qn4">Q4.</string>
    <string name="q4"> Which of following the country is an Asian country ?</string>
    <string name="q4_op1">Japan </string>
    <string name="q4_op2">Russia</string>
    <string name="q4_op3">Italy</string>
    <string name="q4_op4">Australia </string>


    <string name="Sub_Heading_schoice">Questions with single correct answer</string>
    <string name="Sub_Heading_mchoice">Question with Multiple correct answers</string>
    <string name="Text_User_Details">User Details</string>
    <string name="Des_imgdes">Background image</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_age">Enter Age</string>
    <string name="Text_Name">Name : </string>
    <string name="Text_Age">Age : </string>
    <string name="Text_Gender">Gender : </string>
    <string name="Rd_Male">Male</string>
    <string name="Rd_Female">Female</string>
    <string name="Decline">Decline to state</string>
    <string name="NoSelection">Nothing Selected</string>
    <string name="Score_is">The Score is : </string>
    <string name="ageerror">Age can not be 0 </string>
    <string name="scoremsg">Your total score is </string>
    <string name="Please_fill">Please fill all the details </string>
    <string name="question">What is colour of your hairs ??</string>

</resources>
